Bug Fixed - header can overlap all now

--- a/styles/style.css
+++ b/styles/style.css
@@ -46,6 +46,7 @@ body {
     top: 0px;
     background-color: white;
     width: 100%;
+    z-index: 1;
 }
 
 .dropdown {
